fixed error in markdown

--- a/main.ipynb
+++ b/main.ipynb
@@ -8,7 +8,7 @@
     "#### K-means Clustering of Amazon Climatological Data to Determine Representative Regions ####\n",
     "Author: Emily Wright - Graduate Trainee (emily.wright@metoffice.gov.uk)\n",
     "\n",
-    "Supervisor: Theo Economou (theo.economou@exeter.ac.uk)\n",
+    "Supervisor: Theo Economou (t.economou@exeter.ac.uk)\n",
     "\n",
     "Training scoped and funded as part of the Transatlantic Data Science Academy"
    ]
